--- a/foorumi/pom.xml
+++ b/foorumi/pom.xml
@@ -46,6 +46,13 @@
                 <debug>true</debug>
             </configuration>
         </plugin>
+        
+        <plugin>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>1.0.0</version>
+        </plugin>
+        
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
