--- a/foorumi/Procfile
+++ b/foorumi/Procfile
@@ -1,1 +1,1 @@
-web:    java -cp target/classes:target/dependency/* src/main/java/tkpe
+web:    java -cp target/classes:target/dependency/* tkpe.foorumi.Maini
